<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/buscar_comercios" />

    <LinearLayout
        android:id="@+id/linear_layout_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_buscar"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="148dp" />
        <Button
            android:id="@+id/btn_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/btn_buscar"
            android:text="@string/borrar"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="148dp"
            tools:ignore="ObsoleteLayoutParam" />
    </LinearLayout>
    <EditText
        android:id="@+id/et_busqueda"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/linear_layout_botones"
        android:inputType="text"
        />

<!--
    <ListView
        android:id="@+id/recipe_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_busqueda"
        android:inputType="text"
       />
-->


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reciclador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_busqueda"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

</RelativeLayout>