<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp">

    <ImageView
        android:id="@+id/ruta_imagen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/bar1"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="6dp"
        >
        <TextView
            android:id="@+id/nombre_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bar nombre blabla"
            tools:ignore="HardcodedText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Zona"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/zona_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Soy la zona"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ruta"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/ruta_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Soy la ruta"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cliente"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/cliente_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="300066319"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/segmento_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bar Popular"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/tipo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Plata"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

        </LinearLayout>
        <TextView
            android:id="@+id/descropcion_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="AVRM_PVMX_CC_F24_R1_CC TIJUANA"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#565659" />
</LinearLayout>
